2001-08-25  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: At start of BG, no longer refrain from
	setting 6:00 am schedules.

2001-08-25  Max Horn <max@quendi.de>
	* fixed NEWS and some other files

2001-08-24  Jeff Freedman  <jeff@amy.nerble.net>

	* configure.in: Changed version to alpha5
	* Makefile.am:  Added a couple missing files.

2001-08-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fixed problem with killing Banes

2001-08-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: replaced unsigned char by uint8
	* Makefile.be: updated
	* gamewin.cc: fixed compile error

2001-08-24  Max Horn <max@quendi.de>
	* various files: removed "../" from #include statments
	* various files: updated copyright header
	* audio/midi_drivers/mac_midi.cc: clean up; made it easier to port the code to SDL_mixer
	* pathfinder/path.cc: added prototype for Find_path to get rid of compiler error

2001-08-23  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapevga.cc: Only subtract 1 from weapon-strike SFX if in
	Black Gate.

	* actors.cc:  Observe bounds when setting food level.

	* objs/objs.cc: Flat shapes always get rendered first.  Fixes
	funny rug in New Magincia.
	* actors.cc (Npc_actor): Fixed remove_schedule() crash.

	* effects.cc (Lightning_effect): Use palette 10 for flashing.

	* game.cc (Game): Made get_game_type() inlined.
	* actors.cc:  Automatons don't need to eat.

2001-08-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* npcnear.cc, actors.h: fixed problem with lenses to view Banes

2001-08-22  Max Horn <max@quendi.de>
	* audio/midi_drivers/mac_midi.*: changed copyright back to "Max Horn"
	  with consent of the team. This was done so that the code can be used
	  for SDL_mixer, too.

2001-08-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc, actions.cc: fixed compile error + warning

2001-08-22  Jeff Freedman  <jeff@amy.nerble.net>
